6.3/api/Namespaces/namespaceshapeworks.md
---
title: shapeworks

---

# shapeworks



## Classes

|                | Name           |
| -------------- | -------------- |
| class | **[shapeworks::AnalysisTool](../Classes/classshapeworks_1_1AnalysisTool.md)**  |
| class | **[shapeworks::AnalysisUtils](../Classes/classshapeworks_1_1AnalysisUtils.md)**  |
| class | **[shapeworks::ColorMap](../Classes/classshapeworks_1_1ColorMap.md)**  |
| class | **[shapeworks::ColorMaps](../Classes/classshapeworks_1_1ColorMaps.md)**  |
| class | **[shapeworks::Command](../Classes/classshapeworks_1_1Command.md)**  |
| class | **[shapeworks::CompareSettings](../Classes/classshapeworks_1_1CompareSettings.md)**  |
| class | **[shapeworks::CompareWidget](../Classes/classshapeworks_1_1CompareWidget.md)**  |
| class | **[shapeworks::Constraint](../Classes/classshapeworks_1_1Constraint.md)**  |
| class | **[shapeworks::Constraints](../Classes/classshapeworks_1_1Constraints.md)**  |
| class | **[shapeworks::ContourDomain](../Classes/classshapeworks_1_1ContourDomain.md)**  |
| class | **[shapeworks::DataTool](../Classes/classshapeworks_1_1DataTool.md)**  |
| class | **[shapeworks::DeepSSMJob](../Classes/classshapeworks_1_1DeepSSMJob.md)** <br>Qt Wrapper for DeepSSM.  |
| class | **[shapeworks::DeepSSMParameters](../Classes/classshapeworks_1_1DeepSSMParameters.md)**  |
| class | **[shapeworks::DeepSSMTool](../Classes/classshapeworks_1_1DeepSSMTool.md)**  |
| class | **[shapeworks::Executable](../Classes/classshapeworks_1_1Executable.md)**  |
| class | **[shapeworks::ExportImageDialog](../Classes/classshapeworks_1_1ExportImageDialog.md)**  |
| class | **[shapeworks::ExportUtils](../Classes/classshapeworks_1_1ExportUtils.md)** <br>Export utilities for Studio.  |
| class | **[shapeworks::FreeFormConstraint](../Classes/classshapeworks_1_1FreeFormConstraint.md)** <br>[FreeFormConstraint]().  |
| class | **[shapeworks::Groom](../Classes/classshapeworks_1_1Groom.md)** <br>High level groom API.  |
| class | **[shapeworks::GroomCommandGroup](../Classes/classshapeworks_1_1GroomCommandGroup.md)**  |
| class | **[shapeworks::GroomParameters](../Classes/classshapeworks_1_1GroomParameters.md)**  |
| class | **[shapeworks::GroomTool](../Classes/classshapeworks_1_1GroomTool.md)**  |
| class | **[shapeworks::GroupPvalueJob](../Classes/classshapeworks_1_1GroupPvalueJob.md)**  |
| class | **[shapeworks::Image](../Classes/classshapeworks_1_1Image.md)**  |
| class | **[shapeworks::ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md)**  |
| class | **[shapeworks::ImageLabel](../Classes/classshapeworks_1_1ImageLabel.md)** <br>An extention of QLabel especially for scaled images.  |
| class | **[shapeworks::ImageUtils](../Classes/classshapeworks_1_1ImageUtils.md)** <br>Helper functions for image.  |
| class | **[shapeworks::IndexRegion](../Classes/classshapeworks_1_1IndexRegion.md)** <br>Indices into a 3d region of memory (can be negative, e.g., for the purpose of padding an image)  |
| class | **[shapeworks::Job](../Classes/classshapeworks_1_1Job.md)**  |
| class | **[shapeworks::KeyboardShortcuts](../Classes/classshapeworks_1_1KeyboardShortcuts.md)**  |
| class | **[shapeworks::LandmarkDefinition](../Classes/classshapeworks_1_1LandmarkDefinition.md)** <br>Landmark class containing properties of each landmark.  |
| class | **[shapeworks::LandmarkItemDelegate](../Classes/classshapeworks_1_1LandmarkItemDelegate.md)**  |
| class | **[shapeworks::LandmarkTableModel](../Classes/classshapeworks_1_1LandmarkTableModel.md)**  |
| class | **[shapeworks::LandmarkWidget](../Classes/classshapeworks_1_1LandmarkWidget.md)** <br>[LandmarkWidget]().  |
| class | **[shapeworks::Lightbox](../Classes/classshapeworks_1_1Lightbox.md)** <br>Display multiple Viewers in a tiled display.  |
| class | **[shapeworks::LogWindow](../Classes/classshapeworks_1_1LogWindow.md)** <br>Log Window.  |
| class | **[shapeworks::MatrixContainer](../Classes/classshapeworks_1_1MatrixContainer.md)**  |
| class | **[shapeworks::Mesh](../Classes/classshapeworks_1_1Mesh.md)**  |
| class | **[shapeworks::MeshCache](../Classes/classshapeworks_1_1MeshCache.md)**  |
| class | **[shapeworks::MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md)**  |
| class | **[shapeworks::MeshDomain](../Classes/classshapeworks_1_1MeshDomain.md)**  |
| class | **[shapeworks::MeshGenerator](../Classes/classshapeworks_1_1MeshGenerator.md)**  |
| struct | **[shapeworks::MeshGeoEntry](../Classes/structshapeworks_1_1MeshGeoEntry.md)**  |
| class | **[shapeworks::MeshGroup](../Classes/classshapeworks_1_1MeshGroup.md)** <br>Representation of a group of meshes.  |
| class | **[shapeworks::MeshManager](../Classes/classshapeworks_1_1MeshManager.md)**  |
| class | **[shapeworks::MeshReader](../Classes/classshapeworks_1_1MeshReader.md)** <br>reads mesh (used only by one of the [Mesh](../Classes/classshapeworks_1_1Mesh.md) constructors)  |
| class | **[shapeworks::MeshReconstructors](../Classes/classshapeworks_1_1MeshReconstructors.md)**  |
| class | **[shapeworks::MeshSlice](../Classes/classshapeworks_1_1MeshSlice.md)** <br>[MeshSlice]().  |
| class | **[shapeworks::MeshUtils](../Classes/classshapeworks_1_1MeshUtils.md)**  |
| class | **[shapeworks::MeshWarper](../Classes/classshapeworks_1_1MeshWarper.md)**  |
| class | **[shapeworks::MeshWorker](../Classes/classshapeworks_1_1MeshWorker.md)**  |
| class | **[shapeworks::MeshWorkItem](../Classes/classshapeworks_1_1MeshWorkItem.md)**  |
| class | **[shapeworks::MeshWorkQueue](../Classes/classshapeworks_1_1MeshWorkQueue.md)**  |
| class | **[shapeworks::MeshWrapper](../Classes/classshapeworks_1_1MeshWrapper.md)**  |
| struct | **[shapeworks::MultiVariateNormalRandom](../Classes/structshapeworks_1_1MultiVariateNormalRandom.md)**  |
| class | **[shapeworks::OptimizationVisualizer](../Classes/classshapeworks_1_1OptimizationVisualizer.md)**  |
| class | **[shapeworks::Optimize](../Classes/classshapeworks_1_1Optimize.md)**  |
| class | **[shapeworks::OptimizeCommandGroup](../Classes/classshapeworks_1_1OptimizeCommandGroup.md)**  |
| class | **[shapeworks::OptimizeParameterFile](../Classes/classshapeworks_1_1OptimizeParameterFile.md)**  |
| class | **[shapeworks::OptimizeParameters](../Classes/classshapeworks_1_1OptimizeParameters.md)**  |
| class | **[shapeworks::OptimizeTool](../Classes/classshapeworks_1_1OptimizeTool.md)**  |
| class | **[shapeworks::PaintWidget](../Classes/classshapeworks_1_1PaintWidget.md)**  |
| class | **[shapeworks::Parameters](../Classes/classshapeworks_1_1Parameters.md)** <br>Parameter settings.  |
| class | **[shapeworks::ParticleDomain](../Classes/classshapeworks_1_1ParticleDomain.md)**  |
| class | **[shapeworks::ParticleImageDomain](../Classes/classshapeworks_1_1ParticleImageDomain.md)**  |
| class | **[shapeworks::ParticleImageDomainWithCurvature](../Classes/classshapeworks_1_1ParticleImageDomainWithCurvature.md)**  |
| class | **[shapeworks::ParticleImageDomainWithGradients](../Classes/classshapeworks_1_1ParticleImageDomainWithGradients.md)**  |
| class | **[shapeworks::ParticleImageDomainWithGradN](../Classes/classshapeworks_1_1ParticleImageDomainWithGradN.md)**  |
| class | **[shapeworks::ParticleImplicitSurfaceDomain](../Classes/classshapeworks_1_1ParticleImplicitSurfaceDomain.md)**  |
| class | **[shapeworks::ParticleNormalEvaluation](../Classes/classshapeworks_1_1ParticleNormalEvaluation.md)**  |
| class | **[shapeworks::ParticleNormalEvaluationJob](../Classes/classshapeworks_1_1ParticleNormalEvaluationJob.md)**  |
| class | **[shapeworks::ParticleProcrustesRegistration](../Classes/classshapeworks_1_1ParticleProcrustesRegistration.md)**  |
| class | **[shapeworks::ParticleRegionDomain](../Classes/classshapeworks_1_1ParticleRegionDomain.md)**  |
| class | **[shapeworks::ParticleShapeStatistics](../Classes/classshapeworks_1_1ParticleShapeStatistics.md)**  |
| class | **[shapeworks::ParticleSystem](../Classes/classshapeworks_1_1ParticleSystem.md)**  |
| class | **[shapeworks::ParticleSystemCommand](../Classes/classshapeworks_1_1ParticleSystemCommand.md)**  |
| class | **[shapeworks::PhysicalRegion](../Classes/classshapeworks_1_1PhysicalRegion.md)** <br>physical bounds of a 3d region of space  |
| class | **[shapeworks::PickResult](../Classes/classshapeworks_1_1PickResult.md)**  |
| class | **[shapeworks::PlaneConstraint](../Classes/classshapeworks_1_1PlaneConstraint.md)** <br>[PlaneConstraint]().  |
| class | **[shapeworks::PlaneWidget](../Classes/classshapeworks_1_1PlaneWidget.md)** <br>[PlaneWidget]().  |
| class | **[shapeworks::PreferencesWindow](../Classes/classshapeworks_1_1PreferencesWindow.md)** <br>Qt UI dialog to control preferences.  |
| class | **[shapeworks::Project](../Classes/classshapeworks_1_1Project.md)** <br>Representation of a project.  |
| class | **[shapeworks::ProjectUtils](../Classes/classshapeworks_1_1ProjectUtils.md)**  |
| class | **[shapeworks::PythonWorker](../Classes/classshapeworks_1_1PythonWorker.md)**  |
| class | **[shapeworks::QGroom](../Classes/classshapeworks_1_1QGroom.md)** <br>Qt Wrapper for [Groom](../Classes/classshapeworks_1_1Groom.md).  |
| class | **[shapeworks::QMeshWarper](../Classes/classshapeworks_1_1QMeshWarper.md)** <br>Wraps [MeshWarper](../Classes/classshapeworks_1_1MeshWarper.md) as a QObject.  |
| class | **[shapeworks::QOptimize](../Classes/classshapeworks_1_1QOptimize.md)** <br>Wraps [Optimize](../Classes/classshapeworks_1_1Optimize.md) as a QObject.  |
| struct | **[shapeworks::Reconstruction](../Classes/structshapeworks_1_1Reconstruction.md)**  |
| class | **[shapeworks::ReconstructSurface](../Classes/classshapeworks_1_1ReconstructSurface.md)**  |
| class | **[shapeworks::Sampler](../Classes/classshapeworks_1_1Sampler.md)**  |
| class | **[shapeworks::Session](../Classes/classshapeworks_1_1Session.md)** <br>Representation of a session.  |
| class | **[shapeworks::Shape](../Classes/classshapeworks_1_1Shape.md)** <br>Representation of a single shape/patient/subject.  |
| class | **[shapeworks::ShapeEvaluation](../Classes/classshapeworks_1_1ShapeEvaluation.md)**  |
| class | **[shapeworks::ShapeEvaluationJob](../Classes/classshapeworks_1_1ShapeEvaluationJob.md)**  |
| class | **[shapeworks::shapeworks_exception](../Classes/classshapeworks_1_1shapeworks__exception.md)**  |
| class | **[shapeworks::ShapeworksCommand](../Classes/classshapeworks_1_1ShapeworksCommand.md)**  |
| class | **[shapeworks::ShapeWorksStudioApp](../Classes/classshapeworks_1_1ShapeWorksStudioApp.md)** <br>Main ShapeWorksStudio window.  |
| class | **[shapeworks::ShapeworksUtils](../Classes/classshapeworks_1_1ShapeworksUtils.md)**  |
| class | **[shapeworks::ShapeworksWorker](../Classes/classshapeworks_1_1ShapeworksWorker.md)**  |
| struct | **[shapeworks::SharedCommandData](../Classes/structshapeworks_1_1SharedCommandData.md)**  |
| class | **[shapeworks::SliceView](../Classes/classshapeworks_1_1SliceView.md)** <br>[SliceView]().  |
| class | **[shapeworks::SphereConstraint](../Classes/classshapeworks_1_1SphereConstraint.md)**  |
| class | **[shapeworks::SplashScreen](../Classes/classshapeworks_1_1SplashScreen.md)**  |
| class | **[shapeworks::StatsGroupLDAJob](../Classes/classshapeworks_1_1StatsGroupLDAJob.md)**  |
| class | **[shapeworks::StatusBarWidget](../Classes/classshapeworks_1_1StatusBarWidget.md)** <br>[StatusBarWidget]().  |
| class | **[shapeworks::StringUtils](../Classes/classshapeworks_1_1StringUtils.md)** <br>String utility functions.  |
| class | **[shapeworks::StudioHandleWidget](../Classes/classshapeworks_1_1StudioHandleWidget.md)**  |
| class | **[shapeworks::StudioInteractorStyle](../Classes/classshapeworks_1_1StudioInteractorStyle.md)**  |
| class | **[shapeworks::StudioLog](../Classes/classshapeworks_1_1StudioLog.md)**  |
| class | **[shapeworks::StudioMesh](../Classes/classshapeworks_1_1StudioMesh.md)** <br>Representation of a single mesh.  |
| class | **[shapeworks::StudioParticles](../Classes/classshapeworks_1_1StudioParticles.md)** <br>Representation of correspondence points for a shape including multiple domains.  |
| class | **[shapeworks::StudioSliceInteractorStyle](../Classes/classshapeworks_1_1StudioSliceInteractorStyle.md)**  |
| class | **[shapeworks::StudioUtils](../Classes/classshapeworks_1_1StudioUtils.md)** <br>Utilities for Studio.  |
| class | **[shapeworks::StudioVtkOutputWindow](../Classes/classshapeworks_1_1StudioVtkOutputWindow.md)** <br>Implementation of vtkOutputWindow to capture and display VTK error messages.  |
| class | **[shapeworks::Style](../Classes/classshapeworks_1_1Style.md)**  |
| class | **[shapeworks::Subject](../Classes/classshapeworks_1_1Subject.md)** <br>Representation of a single subject.  |
| class | **[shapeworks::TriMeshWrapper](../Classes/classshapeworks_1_1TriMeshWrapper.md)**  |
| class | **[shapeworks::Variant](../Classes/classshapeworks_1_1Variant.md)** <br>[Variant]() class to represent multiple types.  |
| class | **[shapeworks::VectorImage](../Classes/classshapeworks_1_1VectorImage.md)** <br>Gradient (vector) image.  |
| class | **[shapeworks::Viewer](../Classes/classshapeworks_1_1Viewer.md)** <br>3D [Viewer]() |
| class | **[shapeworks::Visualizer](../Classes/classshapeworks_1_1Visualizer.md)** <br>Controls display of objects in viewers.  |
| class | **[shapeworks::VtkMeshWrapper](../Classes/classshapeworks_1_1VtkMeshWrapper.md)**  |
| class | **[shapeworks::WheelEventForwarder](../Classes/classshapeworks_1_1WheelEventForwarder.md)**  |
| class | **[shapeworks::Worker](../Classes/classshapeworks_1_1Worker.md)**  |

## Types

|                | Name           |
| -------------- | -------------- |
| enum| **[Axis](../Namespaces/namespaceshapeworks.md#enum-axis)** { invalid = -1, X, Y, Z}<br>handy way to specify an axis  |
| enum class char | **[ConstraintType](../Namespaces/namespaceshapeworks.md#enum-constrainttype)** { Sphere = 'S', CuttingPlane = 'C', FreeForm = 'F'} |
| enum class int | **[CorrespondenceMode](../Namespaces/namespaceshapeworks.md#enum-correspondencemode)** { MeanEnergy = 0, EnsembleEntropy = 1, EnsembleRegressionEntropy = 3, EnsembleMixedEffectsEntropy = 4, MeshBasedGeneralEntropy = 5, MeshBasedGeneralMeanEnergy = 6} |
| enum class char | **[DomainType](../Namespaces/namespaceshapeworks.md#enum-domaintype)** { Image = 'I', Mesh = 'M', Contour = 'C'} |
| enum| **[ArrayTransferOptions](../Namespaces/namespaceshapeworks.md#enum-arraytransferoptions)** { COPY_ARRAY, SHARE_ARRAY, MOVE_ARRAY}<br>ways of tranferring Arrays to Python, copy being the least efficient but most conservative  |
| enum| **[LandmarkColumns](../Namespaces/namespaceshapeworks.md#enum-landmarkcolumns)** { VISIBLE_E, COLOR_E, NAME_E, POSITION_E, SET_BUTTON_E, COMMENT_E, END_E} |
| enum| **[LandmarkVisibility](../Namespaces/namespaceshapeworks.md#enum-landmarkvisibility)** { ALL_VISIBLE_E, NONE_VISIBLE_E, SOME_VISIBLE_E} |
| enum| **[DisplayMode](../Namespaces/namespaceshapeworks.md#enum-displaymode)** { Original = 0, Groomed = 1, Reconstructed = 2} |
| enum class| **[MessageType](../Namespaces/namespaceshapeworks.md#enum-messagetype)** { normal, warning, error, debug} |
| using itk::Index< 3 > | **[Coord](../Namespaces/namespaceshapeworks.md#using-coord)** <br>Simple names for common types used in the framework.  |
| using itk::Size< 3 > | **[Dims](../Namespaces/namespaceshapeworks.md#using-dims)**  |
| using itk::Point< double, 3 > | **[Point3](../Namespaces/namespaceshapeworks.md#using-point3)**  |
| using itk::Vector< double, 3 > | **[Vector3](../Namespaces/namespaceshapeworks.md#using-vector3)**  |
| using itk::Matrix< double, 4, 4 > | **[Matrix44](../Namespaces/namespaceshapeworks.md#using-matrix44)**  |
| using itk::Matrix< double, 3, 3 > | **[Matrix33](../Namespaces/namespaceshapeworks.md#using-matrix33)**  |
| using itk::Point< int, 3 > | **[IPoint3](../Namespaces/namespaceshapeworks.md#using-ipoint3)**  |
| using itk::Point< float, 3 > | **[FPoint3](../Namespaces/namespaceshapeworks.md#using-fpoint3)**  |
| using itk::CovariantVector< float, 3 > | **[Covariant](../Namespaces/namespaceshapeworks.md#using-covariant)**  |
| using Vector3 | **[Vector](../Namespaces/namespaceshapeworks.md#using-vector)**  |
| using Point3 | **[Point](../Namespaces/namespaceshapeworks.md#using-point)**  |
| using Matrix33 | **[Matrix](../Namespaces/namespaceshapeworks.md#using-matrix)**  |
| using vtkSmartPointer< vtkPlane > | **[Plane](../Namespaces/namespaceshapeworks.md#using-plane)**  |
| using vtkSmartPointer< vtkDataArray > | **[Array](../Namespaces/namespaceshapeworks.md#using-array)**  |
| using Array | **[Field](../Namespaces/namespaceshapeworks.md#using-field)**  |
| using std::vector< Point3 > | **[PointArray](../Namespaces/namespaceshapeworks.md#using-pointarray)**  |
| using itk::Transform< double, 3 > | **[GenericTransform](../Namespaces/namespaceshapeworks.md#using-generictransform)** <br>All transforms can be accessed using a generic transform pointer.  |
| using itk::IdentityTransform< double, 3 > | **[IdentityTransform](../Namespaces/namespaceshapeworks.md#using-identitytransform)**  |
| using GenericTransform::Pointer | **[TransformPtr](../Namespaces/namespaceshapeworks.md#using-transformptr)**  |
| using itk::AffineTransform< double, 3 > | **[AffineTransform](../Namespaces/namespaceshapeworks.md#using-affinetransform)** <br>Affine transforms are used for many [Image]() manipulation commands.  |
| using AffineTransform::Pointer | **[AffineTransformPtr](../Namespaces/namespaceshapeworks.md#using-affinetransformptr)**  |
| using vtkSmartPointer< vtkTransform > | **[MeshTransform](../Namespaces/namespaceshapeworks.md#using-meshtransform)** <br>[Mesh]() transforms.  |
| using [itk::ThinPlateSplineKernelTransform2](../Classes/classitk_1_1ThinPlateSplineKernelTransform2.md)< double, 3 > | **[ThinPlateSplineTransform](../Namespaces/namespaceshapeworks.md#using-thinplatesplinetransform)** <br>Transforms that can be used for [ReconstructSurface]().  |
| using [itk::CompactlySupportedRBFSparseKernelTransform](../Classes/classitk_1_1CompactlySupportedRBFSparseKernelTransform.md)< double, 3 > | **[RBFSSparseTransform](../Namespaces/namespaceshapeworks.md#using-rbfssparsetransform)**  |
| using std::shared_ptr< [Project](../Classes/classshapeworks_1_1Project.md) > | **[ProjectHandle](../Namespaces/namespaceshapeworks.md#using-projecthandle)**  |
| template <typename T \> <br>using Eigen::Matrix< T, Eigen::Dynamic, Eigen::Dynamic, Eigen::RowMajor > | **[VnlMatrix](../Namespaces/namespaceshapeworks.md#using-vnlmatrix)**  |
| using std::map< [MeshWorkItem](../Classes/classshapeworks_1_1MeshWorkItem.md), MeshHandle > | **[CacheMap](../Namespaces/namespaceshapeworks.md#using-cachemap)**  |
| using std::list< [MeshWorkItem](../Classes/classshapeworks_1_1MeshWorkItem.md) > | **[CacheList](../Namespaces/namespaceshapeworks.md#using-cachelist)**  |
| typedef QSharedPointer< [Session](../Classes/classshapeworks_1_1Session.md) > | **[SessionHandle](../Namespaces/namespaceshapeworks.md#typedef-sessionhandle)**  |
| using vtkSmartPointer< vtkTransform > | **[TransformType](../Namespaces/namespaceshapeworks.md#using-transformtype)** <br>TODO: replace this.  |
| using QSharedPointer< [Shape](../Classes/classshapeworks_1_1Shape.md) > | **[ShapeHandle](../Namespaces/namespaceshapeworks.md#using-shapehandle)**  |
| using QVector< ShapeHandle > | **[ShapeList](../Namespaces/namespaceshapeworks.md#using-shapelist)**  |
| using std::shared_ptr< [StudioMesh](../Classes/classshapeworks_1_1StudioMesh.md) > | **[MeshHandle](../Namespaces/namespaceshapeworks.md#using-meshhandle)**  |
| using std::vector< MeshHandle > | **[MeshList](../Namespaces/namespaceshapeworks.md#using-meshlist)**  |
| typedef QSharedPointer< [Lightbox](../Classes/classshapeworks_1_1Lightbox.md) > | **[LightboxHandle](../Namespaces/namespaceshapeworks.md#typedef-lightboxhandle)**  |
| typedef QSharedPointer< [Viewer](../Classes/classshapeworks_1_1Viewer.md) > | **[ViewerHandle](../Namespaces/namespaceshapeworks.md#typedef-viewerhandle)**  |
| typedef QVector< ViewerHandle > | **[ViewerList](../Namespaces/namespaceshapeworks.md#typedef-viewerlist)**  |
| typedef QSharedPointer< [Visualizer](../Classes/classshapeworks_1_1Visualizer.md) > | **[VisualizerHandle](../Namespaces/namespaceshapeworks.md#typedef-visualizerhandle)**  |

## Functions

|                | Name           |
| -------------- | -------------- |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(ReadImage , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(WriteImage , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(ImageInfo , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(Antialias , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(ResampleImage , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(ResizeImage , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(RecenterImage , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(PadImage , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(TranslateImage , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(ScaleImage , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(Rotate , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(ExtractLabel , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(CloseHoles , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(Binarize , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(ComputeDT , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(CurvatureFilter , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(GradientFilter , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(SigmoidFilter , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(TPLevelSetFilter , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(TopologyPreservingFilter , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(IntensityFilter , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(Blur , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(BoundingBoxImage , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(ImageBounds , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(CropImage , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(ICPRigid , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(ClipImage , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(ReflectImage , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(SetOrigin , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(SetSpacing , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(WarpImage , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(CompareImage , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(NegateImage , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(AddImage , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(SubtractImage , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(MultiplyImage , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(DivideImage , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(ImageToMesh , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(SetRegion , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(Isolate , [ImageCommand](../Classes/classshapeworks_1_1ImageCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(ReadParticleSystem , [ParticleSystemCommand](../Classes/classshapeworks_1_1ParticleSystemCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(Compactness , [ParticleSystemCommand](../Classes/classshapeworks_1_1ParticleSystemCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(Generalization , [ParticleSystemCommand](../Classes/classshapeworks_1_1ParticleSystemCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(Specificity , [ParticleSystemCommand](../Classes/classshapeworks_1_1ParticleSystemCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(ReadMesh , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(WriteMesh , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(MeshInfo , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(Coverage , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(Smooth , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(SmoothSinc , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(Remesh , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(RemeshPercent , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(InvertNormals , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(ReflectMesh , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(TransformMesh , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(FillHoles , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(ProbeVolume , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(ClipMesh , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(TranslateMesh , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(ScaleMesh , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(BoundingBoxMesh , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(MeshBounds , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(Distance , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(ComputeNormals , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(SetField , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(GetField , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(SetFieldValue , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(GetFieldValue , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(FieldRange , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(FieldMean , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(FieldStd , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(FieldNames , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(FixElement , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(ClipClosedSurface , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(ClosestPoint , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(GeodesicDistance , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(GeodesicDistanceToLandmark , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(MeanNormals , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(Curvature , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(MeshToImage , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(MeshToDT , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(CompareMesh , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(WarpMesh , [MeshCommand](../Classes/classshapeworks_1_1MeshCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(Seed , [ShapeworksCommand](../Classes/classshapeworks_1_1ShapeworksCommand.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(OptimizeCommand , [OptimizeCommandGroup](../Classes/classshapeworks_1_1OptimizeCommandGroup.md) ) |
| | **[COMMAND_DECLARE](../Namespaces/namespaceshapeworks.md#function-command-declare)**(GroomCommand , [GroomCommandGroup](../Classes/classshapeworks_1_1GroomCommandGroup.md) ) |
| std::ostream & | **[operator<<](../Namespaces/namespaceshapeworks.md#function-operator<<)**(std::ostream & os, const [IndexRegion](../Classes/classshapeworks_1_1IndexRegion.md) & region) |
| std::ostream & | **[operator<<](../Namespaces/namespaceshapeworks.md#function-operator<<)**(std::ostream & os, const [PhysicalRegion](../Classes/classshapeworks_1_1PhysicalRegion.md) & region) |
| Vector3 | **[makeVector](../Namespaces/namespaceshapeworks.md#function-makevector)**(std::array< double, 3 > && arr)<br>Enables `makeVector({1,2,3});`, construction using an initializer list (likely an accidental omission in current ITK version)  |
| PointArray | **[makePointArray](../Namespaces/namespaceshapeworks.md#function-makepointarray)**(int size, Point3 value) |
| TransformPtr | **[createTransform](../Namespaces/namespaceshapeworks.md#function-createtransform)**(const Matrix33 & mat, const Vector3 & translate =makeVector({0, 0, 0})) |
| Plane | **[makePlane](../Namespaces/namespaceshapeworks.md#function-makeplane)**(const Point & p, const Vector3 & n)<br>Make a plane.  |
| Plane | **[makePlane](../Namespaces/namespaceshapeworks.md#function-makeplane)**(const Point & p0, const Point & p1, const Point & p2) |
| Point | **[getOrigin](../Namespaces/namespaceshapeworks.md#function-getorigin)**(const Plane plane)<br>Get origin and normal of plane.  |
| Vector3 | **[getNormal](../Namespaces/namespaceshapeworks.md#function-getnormal)**(const Plane plane) |
| MeshTransform | **[createMeshTransform](../Namespaces/namespaceshapeworks.md#function-createmeshtransform)**(const vtkSmartPointer< vtkMatrix4x4 > & mat) |
| Point | **[toPoint](../Namespaces/namespaceshapeworks.md#function-topoint)**(const Dims & d)<br>For deliberate conversions between types.  |
| Point | **[toPoint](../Namespaces/namespaceshapeworks.md#function-topoint)**(const Coord & c) |
| Vector | **[toVector](../Namespaces/namespaceshapeworks.md#function-tovector)**(const Dims & d) |
| Vector | **[toVector](../Namespaces/namespaceshapeworks.md#function-tovector)**(const Point & p) |
| Vector | **[toVector](../Namespaces/namespaceshapeworks.md#function-tovector)**(const itk::CovariantVector< double, 3 > & v) |
| Point | **[toPoint](../Namespaces/namespaceshapeworks.md#function-topoint)**(const Vector & v) |
| Coord | **[toCoord](../Namespaces/namespaceshapeworks.md#function-tocoord)**(const Dims & d) |
| Dims | **[toDims](../Namespaces/namespaceshapeworks.md#function-todims)**(const Coord & c) |
| Dims | **[toDims](../Namespaces/namespaceshapeworks.md#function-todims)**(const Point & p) |
| Coord | **[toCoord](../Namespaces/namespaceshapeworks.md#function-tocoord)**(const Point & p) |
| template <typename P \> <br>P | **[negate](../Namespaces/namespaceshapeworks.md#function-negate)**(const P & p)<br>Negation operator (ITK only has it for Vectors, but sometimes useful for Points)  |
| Vector3 | **[negate](../Namespaces/namespaceshapeworks.md#function-negate)**(const Vector3 & v)<br>Negate function for Vector (requires makeVector)  |
| template <typename P \> <br>P | **[invertValue](../Namespaces/namespaceshapeworks.md#function-invertvalue)**(const P & p)<br>Inversion function for all but Vector.  |
| Vector3 | **[invertValue](../Namespaces/namespaceshapeworks.md#function-invertvalue)**(const Vector3 & v)<br>Inversion function for Vector (requires makeVector)  |
| Vector3 | **[dotProduct](../Namespaces/namespaceshapeworks.md#function-dotproduct)**(const Vector3 & a, const Vector3 & b)<br>Vector dot and cross products.  |
| Vector3 | **[crossProduct](../Namespaces/namespaceshapeworks.md#function-crossproduct)**(const Vector3 & a, const Vector3 & b) |
| double | **[length](../Namespaces/namespaceshapeworks.md#function-length)**(const Vector3 & v) |
| Axis | **[toAxis](../Namespaces/namespaceshapeworks.md#function-toaxis)**(const std::string & str) |
| std::string | **[axisToString](../Namespaces/namespaceshapeworks.md#function-axistostring)**(Axis axis) |
| bool | **[axis_is_valid](../Namespaces/namespaceshapeworks.md#function-axis-is-valid)**(const Vector3 & axis)<br>Ensure an axis is valid.  |
| bool | **[axis_is_valid](../Namespaces/namespaceshapeworks.md#function-axis-is-valid)**(const Axis & axis) |
| double | **[degToRad](../Namespaces/namespaceshapeworks.md#function-degtorad)**(const double deg)<br>convert degrees to radians  |
| double | **[mean](../Namespaces/namespaceshapeworks.md#function-mean)**(const Field field)<br>incrementally compute (single-component) mean of field  |
| double | **[stddev](../Namespaces/namespaceshapeworks.md#function-stddev)**(const Field field)<br>compute (single-component) standard deviation of field  |
| std::vector< double > | **[range](../Namespaces/namespaceshapeworks.md#function-range)**(const Field field)<br>compute (single-component) range of field  |
| template <typename P ,typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>\> <br>P | **[operator+](../Namespaces/namespaceshapeworks.md#function-operator+)**(const P & p, const P & q) |
| template <typename P ,typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>\> <br>P | **[operator-](../Namespaces/namespaceshapeworks.md#function-operator-)**(const P & p, const P & q) |
| template <typename P ,typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Vector, P>::value ||                                                  std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>\> <br>P | **[operator*](../Namespaces/namespaceshapeworks.md#function-operator*)**(const P & p, const P & q) |
| template <typename P ,typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Vector, P>::value ||                                                  std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>\> <br>P | **[operator/](../Namespaces/namespaceshapeworks.md#function-operator/)**(const P & p, const P & q) |
| template <typename P ,typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>\> <br>P & | **[operator+=](../Namespaces/namespaceshapeworks.md#function-operator+=)**(P & p, const P & q) |
| template <typename P ,typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>\> <br>P & | **[operator-=](../Namespaces/namespaceshapeworks.md#function-operator-=)**(P & p, const P & q) |
| template <typename P ,typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>\> <br>P | **[operator*](../Namespaces/namespaceshapeworks.md#function-operator*)**(const P & p, const double x) |
| template <typename P ,typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>\> <br>P | **[operator/](../Namespaces/namespaceshapeworks.md#function-operator/)**(const P & p, const double x) |
| template <typename P ,typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>\> <br>P & | **[operator*=](../Namespaces/namespaceshapeworks.md#function-operator*=)**(P & p, const double x) |
| template <typename P ,typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>\> <br>P & | **[operator/=](../Namespaces/namespaceshapeworks.md#function-operator/=)**(P & p, const double x) |
| template <typename T \> <br>bool | **[epsEqual](../Namespaces/namespaceshapeworks.md#function-epsequal)**(T a, T b, T epsilon) |
| template <typename P ,typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Vector, P>::value ||                                                 std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>\> <br>bool | **[epsEqual](../Namespaces/namespaceshapeworks.md#function-epsequal)**(const P & a, const P & b, const typename P::ValueType & eps) |
| bool | **[epsEqual](../Namespaces/namespaceshapeworks.md#function-epsequal)**(double a, double b, double eps) |
| template <typename T \> <br>T | **[clamp](../Namespaces/namespaceshapeworks.md#function-clamp)**(T value, T min, T max)<br>Simple clamp operation until C++17.  |
| std::ostream & | **[operator<<](../Namespaces/namespaceshapeworks.md#function-operator<<)**(std::ostream & os, const [Image](../Classes/classshapeworks_1_1Image.md) & img)<br>stream insertion operators for [Image]() |
| [Image](../Classes/classshapeworks_1_1Image.md) | **[operator*](../Namespaces/namespaceshapeworks.md#function-operator*)**(const [Image](../Classes/classshapeworks_1_1Image.md) & img, const double x)<br>override templates defined in [Shapeworks.h] |
| [Image](../Classes/classshapeworks_1_1Image.md) | **[operator/](../Namespaces/namespaceshapeworks.md#function-operator/)**(const [Image](../Classes/classshapeworks_1_1Image.md) & img, const double x) |
| [Image](../Classes/classshapeworks_1_1Image.md) & | **[operator*=](../Namespaces/namespaceshapeworks.md#function-operator*=)**([Image](../Classes/classshapeworks_1_1Image.md) & img, const double x) |
| [Image](../Classes/classshapeworks_1_1Image.md) & | **[operator/=](../Namespaces/namespaceshapeworks.md#function-operator/=)**([Image](../Classes/classshapeworks_1_1Image.md) & img, const double x) |
| std::ostream & | **[operator<<](../Namespaces/namespaceshapeworks.md#function-operator<<)**(std::ostream & os, const [Mesh](../Classes/classshapeworks_1_1Mesh.md) & mesh)<br>stream insertion operators for [Mesh]() |
| void | **[SaveReconstructions](../Namespaces/namespaceshapeworks.md#function-savereconstructions)**(std::vector< [Reconstruction](../Classes/structshapeworks_1_1Reconstruction.md) > & reconstructions, const std::vector< std::string > & srcPaths, const std::string & saveTo) |
| template <typename T \> <br>std::string | **[variant_to_string](../Namespaces/namespaceshapeworks.md#function-variant-to-string)**(T begin, T end) |
| void | **[printNumpyArrayInfo](../Namespaces/namespaceshapeworks.md#function-printnumpyarrayinfo)**(const py::array & np_array)<br>print buffer info for the given array (dims, format, strides, etc)  |
| void | **[verifyOrderAndPacking](../Namespaces/namespaceshapeworks.md#function-verifyorderandpacking)**(const py::array & np_array)<br>verify py::array has expected order and is densely packed, throw if not  |
| void | **[setOwnership](../Namespaces/namespaceshapeworks.md#function-setownership)**(py::array & array, bool owns)<br>sets the OWNDATA flag of the given array to `owns` |
| Image::ImageType::Pointer | **[wrapNumpyArr](../Namespaces/namespaceshapeworks.md#function-wrapnumpyarr)**(py::array & np_array)<br>helper function for Image.init and Image.assign  |
| Array | **[pyToArr](../Namespaces/namespaceshapeworks.md#function-pytoarr)**(py::array & np_array, bool take_ownership =true)<br>converts py::array to vtkDataArray, optionally taking ownership of data  |
| py::array | **[arrToPy](../Namespaces/namespaceshapeworks.md#function-arrtopy)**(Array & array, ArrayTransferOptions xfer =COPY_ARRAY)<br>convert a vtkDataArray (AOS assumed) to a py::array using specified means of transfer  |
| Eigen::MatrixXd | **[itkTransformToEigen](../Namespaces/namespaceshapeworks.md#function-itktransformtoeigen)**(TransformPtr itk_xform) |
| TransformPtr | **[eigen44ToItkTransform](../Namespaces/namespaceshapeworks.md#function-eigen44toitktransform)**(const Eigen::Matrix< double, 4, 4 > & eigen_mat) |
| Eigen::Matrix< double, 4, 4, Eigen::RowMajor > | **[vtkTransformToEigen](../Namespaces/namespaceshapeworks.md#function-vtktransformtoeigen)**(MeshTransform vtk_xform) |
| MeshTransform | **[eigen44ToVtkTransform](../Namespaces/namespaceshapeworks.md#function-eigen44tovtktransform)**(const Eigen::Matrix< double, 4, 4, Eigen::RowMajor > & eigen_mat) |
| template <typename T ,unsigned NRows,unsigned NCols\> <br>Eigen::Matrix< T, NRows, NCols, Eigen::RowMajor > | **[itkToEigen](../Namespaces/namespaceshapeworks.md#function-itktoeigen)**(const itk::Matrix< T, NRows, NCols > & itk_mat)<br>Conversion (by copy) of itk matrix to Eigen::Matrix.  |
| template <typename T ,int NRows,int NCols\> <br>itk::Matrix< T, NRows, NCols > | **[eigenToItk](../Namespaces/namespaceshapeworks.md#function-eigentoitk)**(const Eigen::Matrix< T, NRows, NCols, Eigen::RowMajor > & eigen_mat)<br>Conversion (by copy) of Eigen::Matrix to itk (i.e., vnl) matrix.  |
| template <typename T \> <br>Eigen::Map< VnlMatrix< T > > | **[vnlToEigen](../Namespaces/namespaceshapeworks.md#function-vnltoeigen)**(const vnl_matrix< T > & vnl_mat)<br>Wrap vnl matrix data to Eigen Matrix.  |
| template <int NRows,int NCols,typename T \> <br>Eigen::Map< Eigen::Matrix< T, NRows, NCols, Eigen::RowMajor > > | **[wrapDataWithEigen](../Namespaces/namespaceshapeworks.md#function-wrapdatawitheigen)**(T * data) |
| template <typename T \> <br>Eigen::Map< Eigen::Matrix< T, Eigen::Dynamic, Eigen::Dynamic, Eigen::RowMajor > > | **[wrapDataWithEigen](../Namespaces/namespaceshapeworks.md#function-wrapdatawitheigen)**(T * data, size_t nrows, size_t ncols)<br>Wrap a data pointer of the specified size with Eigen::Matrix.  |
| template <unsigned NRows,unsigned NCols,typename T \> <br>itk::Matrix< T, NRows, NCols > | **[wrapDataWithItk](../Namespaces/namespaceshapeworks.md#function-wrapdatawithitk)**(T * data) |
| std::string | **[display_mode_to_string](../Namespaces/namespaceshapeworks.md#function-display-mode-to-string)**(DisplayMode display_mode) |
| DisplayMode | **[string_to_display_mode](../Namespaces/namespaceshapeworks.md#function-string-to-display-mode)**(std::string str) |

## Attributes

|                | Name           |
| -------------- | -------------- |
| const auto | **[Pi](../Namespaces/namespaceshapeworks.md#variable-pi)** <br>pi that doesn't depend on deprecated or non-std lib defines  |

## Types Documentation

### enum Axis

| Enumerator | Value | Description |
| ---------- | ----- | ----------- |
| invalid | -1|   |
| X | |   |
| Y | |   |
| Z | |   |



handy way to specify an axis 

### enum ConstraintType

| Enumerator | Value | Description |
| ---------- | ----- | ----------- |
| Sphere | 'S'|   |
| CuttingPlane | 'C'|   |
| FreeForm | 'F'|   |




### enum CorrespondenceMode

| Enumerator | Value | Description |
| ---------- | ----- | ----------- |
| MeanEnergy | 0|   |
| EnsembleEntropy | 1|   |
| EnsembleRegressionEntropy | 3|   |
| EnsembleMixedEffectsEntropy | 4|   |
| MeshBasedGeneralEntropy | 5|   |
| MeshBasedGeneralMeanEnergy | 6|   |




### enum DomainType

| Enumerator | Value | Description |
| ---------- | ----- | ----------- |
| Image | 'I'|   |
| Mesh | 'M'|   |
| Contour | 'C'|   |




### enum ArrayTransferOptions

| Enumerator | Value | Description |
| ---------- | ----- | ----------- |
| COPY_ARRAY | |   |
| SHARE_ARRAY | |   |
| MOVE_ARRAY | |   |



ways of tranferring Arrays to Python, copy being the least efficient but most conservative 

### enum LandmarkColumns

| Enumerator | Value | Description |
| ---------- | ----- | ----------- |
| VISIBLE_E | |   |
| COLOR_E | |   |
| NAME_E | |   |
| POSITION_E | |   |
| SET_BUTTON_E | |   |
| COMMENT_E | |   |
| END_E | |   |




### enum LandmarkVisibility

| Enumerator | Value | Description |
| ---------- | ----- | ----------- |
| ALL_VISIBLE_E | |   |
| NONE_VISIBLE_E | |   |
| SOME_VISIBLE_E | |   |




### enum DisplayMode

| Enumerator | Value | Description |
| ---------- | ----- | ----------- |
| Original | 0|   |
| Groomed | 1|   |
| Reconstructed | 2|   |




### enum MessageType

| Enumerator | Value | Description |
| ---------- | ----- | ----------- |
| normal | |   |
| warning | |   |
| error | |   |
| debug | |   |




### using Coord

```cpp
using shapeworks::Coord = typedef itk::Index<3>;
```

Simple names for common types used in the framework. 

### using Dims

```cpp
using shapeworks::Dims = typedef itk::Size<3>;
```


### using Point3

```cpp
using shapeworks::Point3 = typedef itk::Point<double, 3>;
```


### using Vector3

```cpp
using shapeworks::Vector3 = typedef itk::Vector<double, 3>;
```


### using Matrix44

```cpp
using shapeworks::Matrix44 = typedef itk::Matrix<double, 4, 4>;
```


### using Matrix33

```cpp
using shapeworks::Matrix33 = typedef itk::Matrix<double, 3, 3>;
```


### using IPoint3

```cpp
using shapeworks::IPoint3 = typedef itk::Point<int, 3>;
```


### using FPoint3

```cpp
using shapeworks::FPoint3 = typedef itk::Point<float, 3>;
```


### using Covariant

```cpp
using shapeworks::Covariant = typedef itk::CovariantVector<float, 3>;
```


### using Vector

```cpp
using shapeworks::Vector = typedef Vector3;
```


### using Point

```cpp
using shapeworks::Point = typedef Point3;
```


### using Matrix

```cpp
using shapeworks::Matrix = typedef Matrix33;
```


### using Plane

```cpp
using shapeworks::Plane = typedef vtkSmartPointer<vtkPlane>;
```


### using Array

```cpp
using shapeworks::Array = typedef vtkSmartPointer<vtkDataArray>;
```


### using Field

```cpp
using shapeworks::Field = typedef Array;
```


### using PointArray

```cpp
using shapeworks::PointArray = typedef std::vector<Point3>;
```


### using GenericTransform

```cpp
using shapeworks::GenericTransform = typedef itk::Transform<double, 3>;
```

All transforms can be accessed using a generic transform pointer. 

### using IdentityTransform

```cpp
using shapeworks::IdentityTransform = typedef itk::IdentityTransform<double, 3>;
```


### using TransformPtr

```cpp
using shapeworks::TransformPtr = typedef GenericTransform::Pointer;
```


### using AffineTransform

```cpp
using shapeworks::AffineTransform = typedef itk::AffineTransform<double, 3>;
```

Affine transforms are used for many [Image]() manipulation commands. 

### using AffineTransformPtr

```cpp
using shapeworks::AffineTransformPtr = typedef AffineTransform::Pointer;
```


### using MeshTransform

```cpp
using shapeworks::MeshTransform = typedef vtkSmartPointer<vtkTransform>;
```

[Mesh]() transforms. 

### using ThinPlateSplineTransform

```cpp
using shapeworks::ThinPlateSplineTransform = typedef itk::ThinPlateSplineKernelTransform2<double, 3>;
```

Transforms that can be used for [ReconstructSurface](). 

### using RBFSSparseTransform

```cpp
using shapeworks::RBFSSparseTransform = typedef itk::CompactlySupportedRBFSparseKernelTransform<double, 3>;
```


### using ProjectHandle

```cpp
using shapeworks::ProjectHandle = typedef std::shared_ptr<Project>;
```


### using VnlMatrix

```cpp
template <typename T >
using shapeworks::VnlMatrix = typedef Eigen::Matrix<T, Eigen::Dynamic, Eigen::Dynamic, Eigen::RowMajor>;
```


### using CacheMap

```cpp
using shapeworks::CacheMap = typedef std::map<MeshWorkItem, MeshHandle>;
```


### using CacheList

```cpp
using shapeworks::CacheList = typedef std::list<MeshWorkItem>;
```


### typedef SessionHandle

```cpp
typedef QSharedPointer<Session> shapeworks::SessionHandle;
```


### using TransformType

```cpp
using shapeworks::TransformType = typedef vtkSmartPointer<vtkTransform>;
```

TODO: replace this. 

### using ShapeHandle

```cpp
using shapeworks::ShapeHandle = typedef QSharedPointer<Shape>;
```


### using ShapeList

```cpp
using shapeworks::ShapeList = typedef QVector<ShapeHandle>;
```


### using MeshHandle

```cpp
using shapeworks::MeshHandle = typedef std::shared_ptr<StudioMesh>;
```


### using MeshList

```cpp
using shapeworks::MeshList = typedef std::vector<MeshHandle>;
```


### typedef LightboxHandle

```cpp
typedef QSharedPointer<Lightbox> shapeworks::LightboxHandle;
```


### typedef ViewerHandle

```cpp
typedef QSharedPointer<Viewer> shapeworks::ViewerHandle;
```


### typedef ViewerList

```cpp
typedef QVector<ViewerHandle> shapeworks::ViewerList;
```


### typedef VisualizerHandle

```cpp
typedef QSharedPointer<Visualizer> shapeworks::VisualizerHandle;
```



## Functions Documentation

### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    ReadImage ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    WriteImage ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    ImageInfo ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    Antialias ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    ResampleImage ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    ResizeImage ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    RecenterImage ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    PadImage ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    TranslateImage ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    ScaleImage ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    Rotate ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    ExtractLabel ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    CloseHoles ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    Binarize ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    ComputeDT ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    CurvatureFilter ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    GradientFilter ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    SigmoidFilter ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    TPLevelSetFilter ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    TopologyPreservingFilter ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    IntensityFilter ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    Blur ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    BoundingBoxImage ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    ImageBounds ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    CropImage ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    ICPRigid ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    ClipImage ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    ReflectImage ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    SetOrigin ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    SetSpacing ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    WarpImage ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    CompareImage ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    NegateImage ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    AddImage ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    SubtractImage ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    MultiplyImage ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    DivideImage ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    ImageToMesh ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    SetRegion ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    Isolate ,
    ImageCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    ReadParticleSystem ,
    ParticleSystemCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    Compactness ,
    ParticleSystemCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    Generalization ,
    ParticleSystemCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    Specificity ,
    ParticleSystemCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    ReadMesh ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    WriteMesh ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    MeshInfo ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    Coverage ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    Smooth ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    SmoothSinc ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    Remesh ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    RemeshPercent ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    InvertNormals ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    ReflectMesh ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    TransformMesh ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    FillHoles ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    ProbeVolume ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    ClipMesh ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    TranslateMesh ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    ScaleMesh ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    BoundingBoxMesh ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    MeshBounds ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    Distance ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    ComputeNormals ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    SetField ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    GetField ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    SetFieldValue ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    GetFieldValue ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    FieldRange ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    FieldMean ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    FieldStd ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    FieldNames ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    FixElement ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    ClipClosedSurface ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    ClosestPoint ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    GeodesicDistance ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    GeodesicDistanceToLandmark ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    MeanNormals ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    Curvature ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    MeshToImage ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    MeshToDT ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    CompareMesh ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    WarpMesh ,
    MeshCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    Seed ,
    ShapeworksCommand 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    OptimizeCommand ,
    OptimizeCommandGroup 
)
```


### function COMMAND_DECLARE

```cpp
COMMAND_DECLARE(
    GroomCommand ,
    GroomCommandGroup 
)
```


### function operator<<

```cpp
std::ostream & operator<<(
    std::ostream & os,
    const IndexRegion & region
)
```


### function operator<<

```cpp
std::ostream & operator<<(
    std::ostream & os,
    const PhysicalRegion & region
)
```


### function makeVector

```cpp
Vector3 makeVector(
    std::array< double, 3 > && arr
)
```

Enables `makeVector({1,2,3});`, construction using an initializer list (likely an accidental omission in current ITK version) 

### function makePointArray

```cpp
PointArray makePointArray(
    int size,
    Point3 value
)
```


### function createTransform

```cpp
TransformPtr createTransform(
    const Matrix33 & mat,
    const Vector3 & translate =makeVector({0, 0, 0})
)
```


### function makePlane

```cpp
Plane makePlane(
    const Point & p,
    const Vector3 & n
)
```

Make a plane. 

### function makePlane

```cpp
Plane makePlane(
    const Point & p0,
    const Point & p1,
    const Point & p2
)
```


### function getOrigin

```cpp
Point getOrigin(
    const Plane plane
)
```

Get origin and normal of plane. 

### function getNormal

```cpp
Vector3 getNormal(
    const Plane plane
)
```


### function createMeshTransform

```cpp
MeshTransform createMeshTransform(
    const vtkSmartPointer< vtkMatrix4x4 > & mat
)
```


### function toPoint

```cpp
Point toPoint(
    const Dims & d
)
```

For deliberate conversions between types. 

### function toPoint

```cpp
Point toPoint(
    const Coord & c
)
```


### function toVector

```cpp
Vector toVector(
    const Dims & d
)
```


### function toVector

```cpp
Vector toVector(
    const Point & p
)
```


### function toVector

```cpp
Vector toVector(
    const itk::CovariantVector< double, 3 > & v
)
```


### function toPoint

```cpp
Point toPoint(
    const Vector & v
)
```


### function toCoord

```cpp
Coord toCoord(
    const Dims & d
)
```


### function toDims

```cpp
Dims toDims(
    const Coord & c
)
```


### function toDims

```cpp
Dims toDims(
    const Point & p
)
```


### function toCoord

```cpp
Coord toCoord(
    const Point & p
)
```


### function negate

```cpp
template <typename P >
P negate(
    const P & p
)
```

Negation operator (ITK only has it for Vectors, but sometimes useful for Points) 

### function negate

```cpp
Vector3 negate(
    const Vector3 & v
)
```

Negate function for Vector (requires makeVector) 

### function invertValue

```cpp
template <typename P >
P invertValue(
    const P & p
)
```

Inversion function for all but Vector. 

### function invertValue

```cpp
Vector3 invertValue(
    const Vector3 & v
)
```

Inversion function for Vector (requires makeVector) 

### function dotProduct

```cpp
Vector3 dotProduct(
    const Vector3 & a,
    const Vector3 & b
)
```

Vector dot and cross products. 

### function crossProduct

```cpp
Vector3 crossProduct(
    const Vector3 & a,
    const Vector3 & b
)
```


### function length

```cpp
double length(
    const Vector3 & v
)
```


### function toAxis

```cpp
Axis toAxis(
    const std::string & str
)
```


### function axisToString

```cpp
std::string axisToString(
    Axis axis
)
```


### function axis_is_valid

```cpp
bool axis_is_valid(
    const Vector3 & axis
)
```

Ensure an axis is valid. 

### function axis_is_valid

```cpp
bool axis_is_valid(
    const Axis & axis
)
```


### function degToRad

```cpp
double degToRad(
    const double deg
)
```

convert degrees to radians 

### function mean

```cpp
double mean(
    const Field field
)
```

incrementally compute (single-component) mean of field 

### function stddev

```cpp
double stddev(
    const Field field
)
```

compute (single-component) standard deviation of field 

### function range

```cpp
std::vector< double > range(
    const Field field
)
```

compute (single-component) range of field 

### function operator+

```cpp
template <typename P ,
typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>>
P operator+(
    const P & p,
    const P & q
)
```


### function operator-

```cpp
template <typename P ,
typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>>
P operator-(
    const P & p,
    const P & q
)
```


### function operator*

```cpp
template <typename P ,
typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Vector, P>::value ||                                                  std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>>
P operator*(
    const P & p,
    const P & q
)
```


### function operator/

```cpp
template <typename P ,
typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Vector, P>::value ||                                                  std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>>
P operator/(
    const P & p,
    const P & q
)
```


### function operator+=

```cpp
template <typename P ,
typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>>
P & operator+=(
    P & p,
    const P & q
)
```


### function operator-=

```cpp
template <typename P ,
typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>>
P & operator-=(
    P & p,
    const P & q
)
```


### function operator*

```cpp
template <typename P ,
typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>>
P operator*(
    const P & p,
    const double x
)
```


### function operator/

```cpp
template <typename P ,
typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>>
P operator/(
    const P & p,
    const double x
)
```


### function operator*=

```cpp
template <typename P ,
typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>>
P & operator*=(
    P & p,
    const double x
)
```


### function operator/=

```cpp
template <typename P ,
typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>>
P & operator/=(
    P & p,
    const double x
)
```


### function epsEqual

```cpp
template <typename T >
bool epsEqual(
    T a,
    T b,
    T epsilon
)
```


### function epsEqual

```cpp
template <typename P ,
typename  =std::enable_if_t<std::is_same<Image, P>::value ||                                                 std::is_same<Coord, P>::value ||                                                 std::is_same<Dims, P>::value ||                                                 std::is_same<Vector, P>::value ||                                                 std::is_same<Point, P>::value ||                                                 std::is_same<IPoint3, P>::value ||                                                 std::is_same<FPoint3, P>::value>>
bool epsEqual(
    const P & a,
    const P & b,
    const typename P::ValueType & eps
)
```


### function epsEqual

```cpp
bool epsEqual(
    double a,
    double b,
    double eps
)
```


### function clamp

```cpp
template <typename T >
T clamp(
    T value,
    T min,
    T max
)
```

Simple clamp operation until C++17. 

### function operator<<

```cpp
std::ostream & operator<<(
    std::ostream & os,
    const Image & img
)
```

stream insertion operators for [Image]()

### function operator*

```cpp
Image operator*(
    const Image & img,
    const double x
)
```

override templates defined in [Shapeworks.h]

### function operator/

```cpp
Image operator/(
    const Image & img,
    const double x
)
```


### function operator*=

```cpp
Image & operator*=(
    Image & img,
    const double x
)
```


### function operator/=

```cpp
Image & operator/=(
    Image & img,
    const double x
)
```


### function operator<<

```cpp
std::ostream & operator<<(
    std::ostream & os,
    const Mesh & mesh
)
```

stream insertion operators for [Mesh]()

### function SaveReconstructions

```cpp
void SaveReconstructions(
    std::vector< Reconstruction > & reconstructions,
    const std::vector< std::string > & srcPaths,
    const std::string & saveTo
)
```


### function variant_to_string

```cpp
template <typename T >
std::string variant_to_string(
    T begin,
    T end
)
```


### function printNumpyArrayInfo

```cpp
void printNumpyArrayInfo(
    const py::array & np_array
)
```

print buffer info for the given array (dims, format, strides, etc) 

### function verifyOrderAndPacking

```cpp
void verifyOrderAndPacking(
    const py::array & np_array
)
```

verify py::array has expected order and is densely packed, throw if not 

### function setOwnership

```cpp
void setOwnership(
    py::array & array,
    bool owns
)
```

sets the OWNDATA flag of the given array to `owns`

### function wrapNumpyArr

```cpp
Image::ImageType::Pointer wrapNumpyArr(
    py::array & np_array
)
```

helper function for Image.init and Image.assign 

### function pyToArr

```cpp
Array pyToArr(
    py::array & np_array,
    bool take_ownership =true
)
```

converts py::array to vtkDataArray, optionally taking ownership of data 

### function arrToPy

```cpp
py::array arrToPy(
    Array & array,
    ArrayTransferOptions xfer =COPY_ARRAY
)
```

convert a vtkDataArray (AOS assumed) to a py::array using specified means of transfer 

### function itkTransformToEigen

```cpp
Eigen::MatrixXd itkTransformToEigen(
    TransformPtr itk_xform
)
```


### function eigen44ToItkTransform

```cpp
TransformPtr eigen44ToItkTransform(
    const Eigen::Matrix< double, 4, 4 > & eigen_mat
)
```


### function vtkTransformToEigen

```cpp
Eigen::Matrix< double, 4, 4, Eigen::RowMajor > vtkTransformToEigen(
    MeshTransform vtk_xform
)
```


### function eigen44ToVtkTransform

```cpp
MeshTransform eigen44ToVtkTransform(
    const Eigen::Matrix< double, 4, 4, Eigen::RowMajor > & eigen_mat
)
```


### function itkToEigen

```cpp
template <typename T ,
unsigned NRows,
unsigned NCols>
Eigen::Matrix< T, NRows, NCols, Eigen::RowMajor > itkToEigen(
    const itk::Matrix< T, NRows, NCols > & itk_mat
)
```

Conversion (by copy) of itk matrix to Eigen::Matrix. 

### function eigenToItk

```cpp
template <typename T ,
int NRows,
int NCols>
itk::Matrix< T, NRows, NCols > eigenToItk(
    const Eigen::Matrix< T, NRows, NCols, Eigen::RowMajor > & eigen_mat
)
```

Conversion (by copy) of Eigen::Matrix to itk (i.e., vnl) matrix. 

### function vnlToEigen

```cpp
template <typename T >
Eigen::Map< VnlMatrix< T > > vnlToEigen(
    const vnl_matrix< T > & vnl_mat
)
```

Wrap vnl matrix data to Eigen Matrix. 

### function wrapDataWithEigen

```cpp
template <int NRows,
int NCols,
typename T >
Eigen::Map< Eigen::Matrix< T, NRows, NCols, Eigen::RowMajor > > wrapDataWithEigen(
    T * data
)
```


Wrap data pointer with Eigen::Matrix. Handy for efficiently going back and forth between Python numpy arrays. WARNING: if data goes out of scope (e.g., numpy array size changes), matrix will point to invalid location. 


### function wrapDataWithEigen

```cpp
template <typename T >
Eigen::Map< Eigen::Matrix< T, Eigen::Dynamic, Eigen::Dynamic, Eigen::RowMajor > > wrapDataWithEigen(
    T * data,
    size_t nrows,
    size_t ncols
)
```

Wrap a data pointer of the specified size with Eigen::Matrix. 

### function wrapDataWithItk

```cpp
template <unsigned NRows,
unsigned NCols,
typename T >
itk::Matrix< T, NRows, NCols > wrapDataWithItk(
    T * data
)
```


Wrap data pointer with itk::Matrix. Handy for efficiently going back and forth between Python numpy arrays. WARNING: This function actually just copies data. 


### function display_mode_to_string

```cpp
std::string display_mode_to_string(
    DisplayMode display_mode
)
```


### function string_to_display_mode

```cpp
DisplayMode string_to_display_mode(
    std::string str
)
```



## Attributes Documentation

### variable Pi

```cpp
const auto Pi = std::atan(1.0) * 4.0;
```

pi that doesn't depend on deprecated or non-std lib defines 




-------------------------------

Updated on 2022-06-10 at 06:10:24 +0000